# DRF-store-internship

./: manage.py  pyproject.toml  requirements.txt
cart/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_alter_cartmodel_id.py  0003_alter_cartitemmodel_id.py  0004_alter_cartitemmodel_quantity.py  0005_auto_20230307_1308.py  0006_alter_cartmodel_options_cartmodel_status_and_more.py  0007_alter_cartmodel_status.py  0008_cartitemmodel_status.py  0009_alter_cartitemmodel_status_alter_cartmodel_status.py  0010_alter_cartmodel_status.py
loftstore/: asgi.py  settings.py  urls.py  wsgi.py  yasg.py
orders/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_auto_20230301_2236.py  0003_auto_20230306_1301.py  0004_auto_20230310_1844.py  0005_alter_ordermodel_options_and_more.py  0006_alter_orderproductsmodel_order.py  0007_alter_orderproductsmodel_order.py  0008_ordermodel_total_price.py  0009_alter_ordermodel_status.py  0010_orderproductsmodel_product_price.py  0011_alter_ordermodel_total_price.py
products/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_productmodel_options.py  0003_picturemodel_productcategorymodel.py  0004_alter_productmodel_category.py  0005_alter_productmodel_category.py  0006_alter_productmodel_category.py  0007_alter_productmodel_category.py  0008_auto_20230307_1340.py  0009_auto_20230307_1444.py  0010_auto_20230308_1741.py  0011_alter_productmodel_characteristics.py  0012_alter_productmodel_characteristics.py  0013_auto_20230310_1705.py  0014_auto_20230310_1739.py  0015_auto_20230310_1844.py  (+11 more)
transactions/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
utils/: permissions.py
(+8 files in other folders)
